--- a/src/views/home.html
+++ b/src/views/home.html
@@ -149,7 +149,7 @@ function getDashboards(groupId) {
   xhr.open('GET', 'https://api.powerbi.com/v1.0/myorg/groups/' + groupId + '/dashboards', true);
   xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage.tokenGlobal);
   xhr.onreadystatechange = function() {
-    if (xhr.status === 200) {
+    if (xmlhttp.readyState==4 && xhr.status === 200) {
       var responseJson = JSON.parse(xhr.responseText);
       return responseJson;
     } else {
@@ -158,6 +158,7 @@ function getDashboards(groupId) {
     }
   };
   xhr.send();
+  return xhr.onreadystatechange();
 }
 
 function getGroups() {
@@ -165,9 +166,9 @@ function getGroups() {
   xhr.open('GET', 'https://api.powerbi.com/v1.0/myorg/groups', true);
   xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage.tokenGlobal);
   xhr.onreadystatechange = function() {
-    if (xhr.status === 200) {
+    if (xmlhttp.readyState==4 && xhr.status === 200) {
       var responseJson = JSON.parse(xhr.responseText);
-      
+       return responseJson;
       /*var responseArr = responseJson.value;
       for (var i in responseArr) {
         if (responseArr[i].name === "ryderdemo") {
@@ -179,13 +180,14 @@ function getGroups() {
       } else {
         return false;
       }*/
-    return responseJson;
+   
     } else {
       //Not a Success
       return "{}";
     }
   };
   xhr.send();
+   return xhr.onreadystatechange();
 }
 
 function loadPowerBIReport(reportName){
