--- a/src/views/home.html
+++ b/src/views/home.html
@@ -149,7 +149,7 @@ function getDashboards(groupId) {
   xhr.open('GET', 'https://api.powerbi.com/v1.0/myorg/groups/' + groupId + '/dashboards', true);
   xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage.tokenGlobal);
   xhr.onreadystatechange = function() {
-    if (xmlhttp.readyState==4 && xhr.status === 200) {
+    if (xhr.readyState==4 && xhr.status === 200) {
       var responseJson = JSON.parse(xhr.responseText);
       return responseJson;
     } else {
@@ -166,7 +166,7 @@ function getGroups() {
   xhr.open('GET', 'https://api.powerbi.com/v1.0/myorg/groups', true);
   xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage.tokenGlobal);
   xhr.onreadystatechange = function() {
-    if (xmlhttp.readyState==4 && xhr.status === 200) {
+    if (xhr.readyState==4 && xhr.status === 200) {
       var responseJson = JSON.parse(xhr.responseText);
        return responseJson;
       /*var responseArr = responseJson.value;
