--- a/src/views/home.html
+++ b/src/views/home.html
@@ -164,12 +164,12 @@ function getGroups() {
   var xhr = new XMLHttpRequest();
   xhr.open('GET', 'https://api.powerbi.com/v1.0/myorg/groups', false);
   xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage.tokenGlobal);
-  xhr.send();
-  if (xhr.readyState == 4 && xhr.status === 200) {
+  xhr.send(null);
+  if (xhr.status === 200) {
     var responseJson = JSON.parse(xhr.responseText);
     return responseJson;  
   } else {
-    return false;
+    return "{}";
   }
 
   /*xhr.onreadystatechange = function() {
