--- a/src/views/home.html
+++ b/src/views/home.html
@@ -146,9 +146,9 @@ function generateTokenForDashboard(groupId, dashboardId) {
 
 function getDashboards(groupId) {
   var xhr = new XMLHttpRequest();
-  xhr.open('GET', 'https://api.powerbi.com/v1.0/myorg/groups/' + groupId + '/dashboards', true);
+  xhr.open('GET', 'https://api.powerbi.com/v1.0/myorg/groups/' + groupId + '/dashboards', false);
   xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage.tokenGlobal);
-  xhr.onreadystatechange = function() {
+  xhr.send(null);
     if (xhr.readyState==4 && xhr.status === 200) {
       var responseJson = JSON.parse(xhr.responseText);
       return responseJson;
@@ -156,8 +156,7 @@ function getDashboards(groupId) {
       //Not a Success
        return "{}";
     }
-  };
-  xhr.send();
+  
 }
 
 function getGroups() {
@@ -165,7 +164,7 @@ function getGroups() {
   xhr.open('GET', 'https://api.powerbi.com/v1.0/myorg/groups', false);
   xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage.tokenGlobal);
   xhr.send(null);
-  if (xhr.status === 200) {
+  if (xhr.readyState==4 && xhr.status === 200) {
     var responseJson = JSON.parse(xhr.responseText);
     return responseJson;  
   } else {
