--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
-
     <title>Ryder Analytics POC</title>
-
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom CSS -->
     <link href="css/1-col-portfolio.css" rel="stylesheet">
-<script src="https://secure.aadcdn.microsoftonline-p.com/lib/1.0.11/js/adal.min.js"></script>
+   <script src="https://secure.aadcdn.microsoftonline-p.com/lib/1.0.11/js/adal.min.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -38,7 +33,7 @@
          <div style="float: left; padding-left: 1400px;">
          <a style="font-size: 20px;"  href="#" onclick="clearToken(); authContext.logOut(); return false;">Log out</a>
       </div>
-        <!-- /.container -->
+     <!-- /.container -->
     </nav>
     <div>
       Click on the Report/Dashboard to Display
@@ -52,6 +47,9 @@
     <div id="embedContainer" style="height: 596.632px;">
    
     </div>
+    <div id="dashboardContainer" style="height: 596.632px;">
+   
+    </div>  
   <script src="js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
   <script src="js/bootstrap.min.js"></script>
