--- a/src/views/home.html
+++ b/src/views/home.html
@@ -38,9 +38,9 @@
     <div>
       Click on the Report/Dashboard to Display
       <div>
-            <button type="button" onclick="loadPowerBIReport('loadnoreport')">LOAD NO REPORT</button>
-            <button type="button" onclick="loadPowerBIReport('PlantProjectedReport')">PLANT PROJECTED REPORT</button>
-            <button type="button" onclick="loadPowerBIDashboard('eydashboard')">EY DASHBOARD</button>
+            <button type="button" onclick="refresh(); loadPowerBIReport('loadnoreport')">LOAD NO REPORT</button>
+            <button type="button" onclick="refresh(); loadPowerBIReport('PlantProjectedReport')">PLANT PROJECTED REPORT</button>
+            <button type="button" onclick="refresh(); loadPowerBIDashboard('eydashboard')">EY DASHBOARD</button>
       </div>
     </div>
     <div>Embed View</div>
